# op_labs

./: main.c  matrix.c  matrix_extension.c  matrix_numpy.py  matrix_python.py
lab04/: 00_bubbles.py  01_days_in_month.py  02_envelop.py  03_division.py  04_student.py  05_store.py  06_rainbow.py  07_wall.py  08_smile.py
lab05/: lab05.py
lab06/: lab6.py
lab07/: lab07.py
lab08/: 01_shapes.py  02_global_color.py  03_shape_select.py  04_fractal.py  05_snowfall.py
lab09/: 01_inhabitants.py  02_district.py  03_burger.py  04_painting.py  my_burger.py
lab09/drawing/: rainbow.py  smile.py  snowfall.py  sun.py  tree.py  wall.py
lab10/: empty_book.xlsx  kitchen.py  kitchen2.py  sample.xlsx
lab10/recipes/: burger.py  ingredients.py  pizza.py  wok.py
lab11/: 01_snowfall.py  02_alchemy.py  03_man_ans_cat.py
lab12/: classes.py  lab12.py
lab13/: basic.py  energies_and_costs.xlsx  ingredients.py  kitchen.py  kitchen2.py
lab13/recipes/: burger.py  pizza.py  wok.py
lab14/: config.py  crud.py  model.py  query.py
lab14/static_data/: days_of_week.csv  disciplines.csv  lessons.csv
lab15/: CMakeLists.txt  c_ext.c  python3.10.tar.xz  run_c_ext.py  setup.py
lab15/idea/: encodings.xml  misc.xml  workspace.xml
